cilium-cli/connectivity/manifests/client-egress-to-echo-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-egress-to-echo
spec:
  podSelector:
    matchLabels:
      kind: client
  egress:
    - to:
        - podSelector:
            matchLabels:
              kind: echo
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - podSelector:
            matchExpressions:
              - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns", "nodelocaldns" ] }
              - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
      ports:
        - port: 53
          # protocol non specified corresponding to ANY in CNP
    # When node-local-dns is deployed with local IP,
    # Cilium labels its ip as world.
    # This change prevents failing the connectivity
    # test for such environments.
    - to:
      ports:
        - port: 53
          protocol: UDP
